# metric-optimization-penner

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  optimize_metric.cpp  optimize_shear.cpp  plot_shear_energy.cpp
